<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/app_title"
        android:textSize="26sp"
        android:textColor="@color/textDark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnManageCourses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:layout_marginStart="40dp"
        android:layout_marginTop="159dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/primaryBlue"
        android:elevation="6dp"
        android:padding="14dp"
        android:text="@string/manage_courses"
        android:textColor="@color/buttonText"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnManageClasses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnManageCourses"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="@color/primaryBlue"
        android:elevation="6dp"
        android:padding="14dp"
        android:text="@string/manage_classes"
        android:textColor="@color/buttonText"
        android:textSize="18sp" />

</RelativeLayout>
