<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="#FFFFFF">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_back"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_button_description"
        android:layout_marginTop="50dp" />

    <!-- Title Text -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_home_title"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvClassList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:layout_below="@id/tvTitle"
        tools:listitem="@layout/item_class" />

    <Button
        android:id="@+id/btnAddClass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#6200EE"
        android:text="@string/add_classes"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:padding="10dp"
        android:elevation="4dp"/>

</RelativeLayout>
